objects/Apttus_DocuApi__DocuSignEnvelope__c.object
<CustomObject>
    <description>This is a generic template for Custom Object.  With this template, you may adjust the default elements and values and add new elements and values.</description>
    <fields>
        <fullName>Apttus_CMDSign__Agreement__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>ID of the associated agreement</description>
        <inlineHelpText>ID of the associated agreement</inlineHelpText>
        <label>Agreement</label>
        <referenceTo>Apttus__APTS_Agreement__c</referenceTo>
        <relationshipName>DocuSignEnvelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__BatchApexStatus__c</fullName>
        <description>This field to track Batch Apex currently running or not, it is only during first step of Envelope creation.</description>
        <inlineHelpText>This field to track Batch Apex currently running or not, it is only during first step of Envelope creation.</inlineHelpText>
        <label>Batch Apex Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DONE</fullName>
                </value>
                <value>
                    <fullName>RUNNING</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__CompletedDocumentDownloadStatus__c</fullName>
        <description>Completed Document Download Status. This flag used to validate before downloading completed documents</description>
        <inlineHelpText>Completed Document Download Status. This flag used to validate before downloading completed documents</inlineHelpText>
        <label>Completed Document Download Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__DocumentName__c</fullName>
        <description>List of Document names stored as JSON String of List&lt;String&gt; object</description>
        <inlineHelpText>List of Document names stored as JSON</inlineHelpText>
        <label>Document Name</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__DocumentUploadStatusMessage__c</fullName>
        <description>DocuSign Envelope Document Upload Status by the Batch Apex (System Use only)</description>
        <inlineHelpText>DocuSign Envelope Document Upload Status by the Batch Apex (System Use only)</inlineHelpText>
        <label>Document Upload Status Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__DocumentUploadStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Document Upload Status (System use only)</description>
        <inlineHelpText>Document Upload Status (System use only)</inlineHelpText>
        <label>Document Upload Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__EmailSubject__c</fullName>
        <description>The subject of the email that will be sent to all recipients. This can be a maximum of 100 characters.</description>
        <inlineHelpText>The subject of the email that will be sent to all recipients. This can be a maximum of 100 characters.</inlineHelpText>
        <label>Email Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__EnvelopeContent__c</fullName>
        <description>Holds Envelope data at the time of creation</description>
        <label>Envelope Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__EnvelopeId__c</fullName>
        <caseSensitive>true</caseSensitive>
        <description>Envelope Id from DocuSign</description>
        <externalId>true</externalId>
        <inlineHelpText>Envelope Id from DocuSign</inlineHelpText>
        <label>Envelope Id</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__NumberOfDocuments__c</fullName>
        <description>Number Of Documents added to this Envelope where we could download after Signing</description>
        <inlineHelpText>Number Of Documents added to this Envelope where we could download after Signing</inlineHelpText>
        <label>Number Of Documents</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__OwnerId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Envelope OwnerId</description>
        <inlineHelpText>Envelope OwnerId</inlineHelpText>
        <label>OwnerId</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DocuSignEnvelopes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__ParentId__c</fullName>
        <description>Reference field for the DocuSign Envelope linked to.</description>
        <inlineHelpText>Reference field for the DocuSign Envelope linked to.</inlineHelpText>
        <label>Parent Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__RecallReason__c</fullName>
        <description>Reason for voiding/recalling the envelope.</description>
        <inlineHelpText>Reason for voiding/recalling the envelope.</inlineHelpText>
        <label>Recall Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__StatusChangeDateTime__c</fullName>
        <description>Date and time of last Envelope Status change.</description>
        <inlineHelpText>Date and time of last Envelope Status change.</inlineHelpText>
        <label>Status Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Apttus_DocuApi__Status__c</fullName>
        <description>Envelope status from DocuSign</description>
        <inlineHelpText>Envelope status from DocuSign</inlineHelpText>
        <label>Status</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>DocuSign Envelope</label>
    <listViews>
        <fullName>Apttus_DocuApi__All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>Apttus_DocuApi__EnvelopeId__c</columns>
        <columns>Apttus_DocuApi__NumberOfDocuments__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Apttus_DocuApi__ParentId__c</columns>
        <columns>Apttus_DocuApi__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DocuSign Envelope Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DocuSign Envelopes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>